# tuitter

./: .env.example  .gitattributes  .gitignore  README.md  _entry.py  app.py  cdk.context.json  cdk.json  install.ps1  install.sh  pyproject.toml  tuitter.spec
.github/workflows/: pypi-release.yml  release.yml
cdk.out/: TuitterNatFreeStack.assets.json  TuitterNatFreeStack.template.json  manifest.json  tree.json
tuitter/: INSTALL.md  PROJECT_DESCRIPTION.md  api_interface.py  ascii_video_widget.py  auth.py  auth_storage.py  data_models.py  env.py  main.py  main.tcss  oauth_server.py  requirements.txt  serve.toml  start_tuitter.sh  ws_client.py
tuitter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
