[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuitter"
version = "1.1.4"
description = "A TUI-based social media client for the modern terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "tuitter Team", email = "team@tuitter.com"}
]
keywords = ["tui", "social-media", "terminal", "ascii-art", "braille"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Terminals",
]

dependencies = [
    "textual==8.0.2",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "websockets>=12.0",
    "rich==14.3.3",
    "pywin32>=305 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Large optional dep only needed for ASCII video conversion
video = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
# Install everything
all = ["tuitter[video]"]

[project.scripts]
tuitter = "tuitter.main:main"

[project.urls]
Homepage = "https://github.com/tuitter/tuitter"
Repository = "https://github.com/tuitter/tuitter"
"Bug Tracker" = "https://github.com/tuitter/tuitter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tuitter*", "asciifer*"]

[tool.setuptools.package-data]
tuitter = ["*.tcss", "*.txt", "*.json", "subway_ascii_frames/*.txt"]
asciifer = ["fonts/*", "examples/*"]

[tool.bumpver]
current_version = "v1.1.4"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"tuitter/__init__.py" = [
    '__version__ = "{pep440_version}"',
]
